--- a/exportar.html
+++ b/exportar.html
@@ -128,13 +128,17 @@
             <p><strong>Año:</strong> <span id="moto-anio">N/A</span></p>
             <p><strong>Color:</strong> <span id="moto-color">N/A</span></p>
             <p><strong>VIN:</strong> <span id="moto-vin">N/A</span></p>
-            <p><strong>KM Registrado (Moto):</strong> <span id="moto-km">N/A</span></p>
+            <p><strong>KM Registrado:</strong> <span id="moto-km">N/A</span></p>
         </div>
 
         <h2>Detalles de Mantenimiento Realizados</h2>
         <div id="mantenimiento-detalles">
             <p style="text-align:center;">Cargando mantenimientos...</p>
         </div>
+                    <p class="promo-footer" style="margin-top: 8px; font-size: 0.9em;">
+                Reporte de <strong>PuraMotor</strong>. Registra los mantenimientos de tu vehículo y accede a más funciones: 
+                <a href="https://play.google.com/store/apps/details?id=me.crad.puramotor" title="Ir a la aplicación SBKR">Visita la App</a>.
+            </p>
 
         <div class="print-button-container">
             <button id="imprimir-btn" class="button-print" style="display: none;">Imprimir / Guardar PDF</button>
@@ -143,10 +147,6 @@
         
         <footer>
             <p>Reporte generado el <span id="footer-fecha"></span>.</p>
-            <p class="promo-footer" style="margin-top: 8px; font-size: 0.9em;">
-                Reporte de <strong>SBKR</strong>. Registra los mantenimientos de tu moto y accede a más funciones: 
-                <a href="index.html" title="Ir a la aplicación SBKR">Visita la App</a>.
-            </p>
         </footer>
     </div>
 
