--- a/personal.html
+++ b/personal.html
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-
-    </style>
 </head>
 <body>
     <div class="container">
@@ -58,8 +56,8 @@
             </div>
         </form>
 
-        <div id="mensaje-error"></div>
-        <div id="mensaje-exito"></div>
+        <div id="mensaje-error" class="mensaje error"></div>
+        <div id="mensaje-exito" class="mensaje exito"></div>
     </div>
     <button id="add-motorcycle" class="fab">
         <span class="fab-icon">⁛</span>
@@ -104,7 +102,7 @@
                 </div>
                 <button type="submit" class="modal-button">Guardar</button>
             </form>
-            <div id="modal-mensaje-error" style="display: none; color: red; margin-top: 10px;"></div>
+            <div id="modal-mensaje-error" class="modal-error-message" style="display: none; color: red; margin-top: 10px;"></div>
         </div>
     </div>
 
@@ -132,6 +130,7 @@
             const mensajeElemento = tipo === 'error' ? mensajeError : mensajeExito;
             mensajeElemento.textContent = mensaje;
             mensajeElemento.style.display = "block";
+            mensajeElemento.className = `mensaje ${tipo}`; // Add class for styling
             setTimeout(() => {
                 mensajeElemento.style.display = "none";
             }, 3000);
@@ -251,6 +250,6 @@
             });
         };
 
-  </script>  
+  </script>
 </body>
 </html>
